@@ -110,6 +110,7 @@ bool doHealOrAttack(thing& actor, thing* target,
    string diceText;
    briefing brief;
    messageController controller;
+   part5* bloodPart;
 
    /* Define Actor orientation
     * FIXME -> call rotate animation! */
@@ -347,10 +348,17 @@ bool doHealOrAttack(thing& actor, thing* target,
       /* Add Blood */
       GLfloat cs = cos(deg2Rad(target->orientation));
       GLfloat sn = sin(deg2Rad(target->orientation));
-      pSystem.addParticle(DNT_PARTICLE_TYPE_BLOOD, 
-                          target->xPosition - (sn*2),
-                          target->yPosition + target->bloodPosition,
-                          target->zPosition - (cs*2), target->bloodFileName);
+
+      bloodPart = (part5*) pSystem.addParticle(DNT_PARTICLE_TYPE_BLOOD, 
+            target->xPosition - (sn*2),
+            target->yPosition + target->bloodPosition,
+            target->zPosition - (cs*2), target->bloodFileName);
+
+      /* Set the blood follow character if needed */
+      if(target->getThingType() == THING_TYPE_CHARACTER)
+      {
+         bloodPart->setFollowCharacter(target, false);
+      }
    }
 
    return(true);
